@@ -1,3 +1,8 @@
+2001-12-21  Bruno Haible  <bruno@clisp.org>
+
+	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.
+	* basename.c (FILESYSTEM_PREFIX_LEN, ISSLASH): Likewise.
+
 2001-12-22  Bruno Haible  <bruno@clisp.org>
 
 	* binary-io.h: New file, extracted from system.h.
